--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
     "toolbar": false,
     "width": 800,
     "height": 600,
-    "icon": "https://github.com/webcomponents/webcomponents-icons/blob/master/logo/logo.svg"
+    "icon":"images/logo.png" 
+  },
+  "scripts": {
+    "start": "nodewebkit"
   },
   "devDependencies": {
     "gulp": "^3.6.2"
+  },
+  "dependencies": {
+    "nodewebkit": "^0.9.2-4"
   }
 }
